--- a/src/binders/templates/header.html
+++ b/src/binders/templates/header.html
@@ -1,49 +1,45 @@
 {% load static %}
 <header>
-  <div class="header-left">
-    <p><a class=header-link" href="https://prosepal.io/" title="homepage">
-      <img src="{% static 'images/logo.png' %}" alt="ProsePal logo" id="logo">
-      ProsePal
-    </a></p>
-  </div>
   <nav class="header-nav">
-    <ul>
+    <ul class="header-menu">
+      <li class="header-list"><a href="{% url 'index' %}" title="homepage">
+        <img src="{% static 'images/logo.png' %}" alt="ProsePal logo" id="logo">
+      </a></li>
       {% if user.is_authenticated %}
-        <li><a class="header-link" href="{% url 'lorebinder' %}">LoreBinders</a></li>
+        <li class="header-list"><a href="{% url 'lorebinder' %}">LoreBinders</a></li>
       {% else %}
-        <li><a class="header-link" href="{% url 'index' %}">LoreBinders</a></li>
+          <li class="header-list"><a href="{% url 'index' %}">LoreBinders</a></li>
       {% endif %}
-      <li class="dropdown">
-        Free Tools
-        <div class="dropdown-content">
-          <a class="header-link" href="{% url 'finetune' %}">GPT 3.5 Finetuner</a>
-          <a class="header-link" href="{% url 'convert_ebook' %}">Convert-ebook</a>
-          <a class="header-link" href="{% url 'finetune_instructions' %}">Instructions</a>
-        </div>
+      <li class="dropdown header-list"><a href="#">Free Tools</a>
+        <ul class="dropdown-content">
+          <li class="dropdown-item free"><a href="{% url 'finetune' %}">GPT 3.5 Finetuner</a></li>
+          <ul class="nested">
+            <li class="dropdown-item sub"><a href="{% url 'finetune_instructions' %}">Instructions</a></li>
+          </ul>
+          <li class="dropdown-item free"><a href="{% url 'convert_ebook' %}">Convert-ebook</a></li>
+        </ul>
       </li>
-    </ul>
-    <div class="toggle" id="toggle">
-      <p id="toggleLabel">Dark mode</p>
-      <label class="switch">
-        <input type="checkbox" id="darkModeToggle" aria-label="Enable dark mode">
-        <span class="slider round"></span>
-      </label>
-    </div>
-  </nav>
-  <div class="header-right">
-    {% if user.is_authenticated %}
-      <div class="account-dropdown">
-        Account
-        <div class="dropdown-content">
-          <a class="header-link" href="{% url 'account' %}#profile">Profile</a>
-          <a class="header-link" href="{% url 'account' %}#buy_credits">Buy Credits</a>
-          <a class="header-link" href="{% url 'account' %}#loreprosebinders">Past Purchases</a>
-          <a class="header-link" href="#">Credits: {{ user.credits_available }}</a>
-          <a class="header-link" href="{% url 'logout' %}">Logout</a>
-        </div>
+      <li class="header-right"><div class="toggle" id="toggle">
+        <p id="toggleLabel">Dark mode</p>
+        <label class="switch">
+          <input type="checkbox" id="darkModeToggle" aria-label="Enable dark mode">
+          <span class="slider round"></span>
+        </label>
+      </div></li>
+        {% if user.is_authenticated %}
+        <li class="dropdown header-right"><a href="#">Account</a>
+          <ul class="dropdown-content">
+            <li class="dropdown-item account"><a href="{% url 'account' %}#profile">Profile</a></li>
+            <li class="dropdown-item account"><a href="{% url 'account' %}#buy_credits">Buy Credits</a></li>
+            <li class="dropdown-item account"><a href="{% url 'account' %}#loreprosebinders">Past Purchases</a></li>
+            <li class="dropdown-item account credits">Credits: {{ user.credits_available }}</li>
+            <li class="dropdown-item account"><a href="{% url 'logout' %}">Logout</a></li>
+          </ul>
+        </li>
+        {% else %}
+        <li class="header-list header-right"><a href="{% url 'signup' %}">Sign Up</a></li>
+        {% endif %}
       </div>
-    {% else %}
-      <a class="header-link" href="{% url 'signup' %}">Sign Up</a>
-    {% endif %}
-  </div>
+    </ul>
+  </nav>
 </header>
