--- a/src/binders/templates/index.html
+++ b/src/binders/templates/index.html
@@ -75,7 +75,7 @@
         <div class="inner-text">
         <h1>Embrace a New Chapter in Story Organization</h1>
         <p>LoreBinders, born from the vision of an indie author turned coder, is set to transform the way narratives are structured. It's a personal journey to solve a common pain point for authors, now ready to be shared with the writing community.</p>
-        <ul>
+        <ul class="anticipation-list">
           <li>Personalized Tool for Authors: Developed by an author for authors, LoreBinders is finely tuned to the nuances of narrative creation. It's a genuine solution to the real challenges you face in organizing complex stories.</li>
           <li>Solo Journey to Innovation: Crafted single-handedly with dedication and a unique blend of writing insight and coding skill, LoreBinders stands as a testament to innovative problem-solving and passion for storytelling.</li>
         </ul>
