--- a/src/binders/templates/lorebinder.html
+++ b/src/binders/templates/lorebinder.html
@@ -1,4 +1,4 @@
-{% extends 'container-base.html' %}
+{% extends 'forms-base.html' %}
 {% load static %}
 
 {% block title %}LoreBinder Setup{% endblock %}
