--- a/src/binders/templates/account.html
+++ b/src/binders/templates/account.html
@@ -4,6 +4,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/forms.css' %}">
+<link rel="stylesheet" href="{% static 'css/account.css' %}">
 {% endblock %}
 {% block extra_js %}
 <script src="{% static 'js/dark-mode.js' %}"></script>
@@ -59,6 +60,11 @@
   <div class="buy_credits hidden">
     <a href="#buy_credits"></a>
     <h1>Buy Credits</h1>
+    <div class="slider-container">
+      <label for="credits">Credits: <span id="credits-value">1</span></label>
+      <input type="range" id="credits" name="credits" min="1" max="10" value="1">
+      <div id="price">Price: $10</div>
+    </div>
   </div>
 {% endblock content %}
 {% block end_js %}
