Removed name and birthday fields from signup and added terms checkbox

--- a/src/binders/templates/login.html
+++ b/src/binders/templates/login.html
@@ -38,7 +38,7 @@
         {% endfor %}
       </div>
     </div>
-    <input type="submit" value="Signup" class="btn btn-primary">
+    <input type="submit" value="Login" class="btn btn-primary">
   </form>
   <div class="switch-auth">
     Don't have an account? <a href="{% url 'signup' %}" id="signup-link" class="auth-switch-link">Sign Up</a>
