--- a/src/binders/templates/signup.html
+++ b/src/binders/templates/signup.html
@@ -28,31 +28,6 @@
             <div class="error">{{ error }}</div>
           {% endfor %}
         </div>
-      
-        <!-- Name Field -->
-        <div class="form-grid" id="div-id_name">
-          <label class="user-input-label" for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
-          {{ form.name }}
-          {% if form.name.help_text %}
-            <small class="help-text">{{ form.name.help_text }}</small>
-          {% endif %}
-          {% for error in form.name.errors %}
-            <div class="error">{{ error }}</div>
-          {% endfor %}
-        </div>
-      
-        <!-- Birthdate Field -->
-        <div class="form-grid" id="div-id_birthdate">
-          <label class="user-input-label" for="{{ form.birthdate.id_for_label }}">{{ form.birthdate.label }}</label>
-          {{ form.birthdate }}
-          {% if form.birthdate.help_text %}
-            <small class="help-text">{{ form.birthdate.help_text }}</small>
-          {% endif %}
-          {% for error in form.birthdate.errors %}
-            <div class="error">{{ error }}</div>
-          {% endfor %}
-        </div>
-      
         <!-- Password Field -->
         <div class="form-grid" id="div-id_password">
           <label class="user-input-label" for="{{ form.password.id_for_label }}">{{ form.password.label }}</label>
@@ -68,7 +43,12 @@
           {% endfor %}
         </div>
       </div>
-      
+      <div id="checkboxes">
+        <div class="check-grid" id="terms">
+          {{ form.terms_agreement }}
+          <label for="{{ form.terms_agreement.id_for_label }}" class="user-input-label">{{ form.terms_agreement.label }}</label>
+        </div>
+        </div>
       <input type="submit" value="Signup" class="btn btn-primary">
     </form>
     <div class="switch-auth">
